# low_latency_layer

./: .clang-format  CMakeLists.txt  LICENSE  README.md  low_latency_layer.json  low_latency_layer.json.in
src/: atomic_time_point.cc  atomic_time_point.hh  context.cc  context.hh  device_clock.cc  device_clock.hh  device_context.cc  device_context.hh  frame_span.cc  frame_span.hh  helper.cc  helper.hh  instance_context.cc  instance_context.hh  latency_controller.hh  layer.cc  layer.hh  layer_context.cc  layer_context.hh  physical_device_context.cc  physical_device_context.hh  queue_context.cc  queue_context.hh  submission.cc  submission.hh  submissions.hh  swapchain_monitor.cc  swapchain_monitor.hh  timestamp_pool.cc  timestamp_pool.hh
src/strategies/: device_strategy.cc  device_strategy.hh  queue_strategy.cc  queue_strategy.hh
src/strategies/anti_lag/: device_strategy.cc  device_strategy.hh  queue_strategy.cc  queue_strategy.hh
src/strategies/low_latency2/: device_strategy.cc  device_strategy.hh  queue_strategy.cc  queue_strategy.hh  semaphore_signal.cc  semaphore_signal.hh  swapchain_monitor.cc  swapchain_monitor.hh
